fix property error spacing

--- a/airbyte-webapp/src/views/Connector/ServiceForm/components/Property/PropertyError.module.scss
+++ b/airbyte-webapp/src/views/Connector/ServiceForm/components/Property/PropertyError.module.scss
@@ -2,4 +2,5 @@
 
 .errorMessage {
   color: colors.$red;
+  margin-top: 5px;
 }
